--- a/server/build.gradle
+++ b/server/build.gradle
@@ -22,6 +22,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.data:spring-data-jpa'
     
+    // Kubernetes Client Models (DTO 매핑용)
+    implementation 'io.kubernetes:client-java:18.0.0'
+    
     // 누락된 의존성 명시적 추가
     implementation 'com.fasterxml:classmate:1.7.0'
     
