--- a/server/build.gradle
+++ b/server/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'com.fasterxml:classmate:1.7.0'
     
 	runtimeOnly 'com.h2database:h2'
+    runtimeOnly 'com.mysql:mysql-connector-j' // MySQL Driver 추가
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.apache.commons:commons-math3:3.6.1'
 
