--- a/server/build.gradle
+++ b/server/build.gradle
@@ -22,6 +22,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.data:spring-data-jpa'
     
+    // Thymeleaf
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+    
     // Kubernetes Client Models (DTO 매핑용)
     implementation 'io.kubernetes:client-java:18.0.0'
     
